--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       --ok:#16a34a;
       --bad:#dc2626;
       --warn:#b45309;
-      --shadow: 0 12px 30px rgba(17,24,39,.10);
+      --shadow: 0 14px 34px rgba(17,24,39,.10);
       --radius:18px;
     }
     *{box-sizing:border-box}
@@ -30,81 +30,119 @@
         radial-gradient(800px 480px at 90% 10%, rgba(0,0,0,.03), transparent 55%),
         linear-gradient(180deg,var(--bg),var(--bg2));
       min-height:100vh;
+      line-height:1.45;
     }
-    .wrap{max-width:900px;margin:0 auto;padding:18px 14px 92px}
-    .brand{display:flex;align-items:flex-start;justify-content:space-between;gap:10px;margin-bottom:12px}
-    .brand h1{font-size:18px;line-height:1.25;margin:0}
-    .brand small{display:block;color:var(--muted);margin-top:6px}
+
+    .wrap{max-width:980px;margin:0 auto;padding:22px 14px 110px}
+    .brand{display:flex;align-items:flex-start;justify-content:space-between;gap:12px;margin-bottom:16px}
+    .brand h1{font-size:19px;line-height:1.25;margin:0}
+    .brand small{display:block;color:var(--muted);margin-top:8px;font-size:13px}
+
     .badge{
       display:inline-flex;align-items:center;gap:6px;
-      padding:8px 10px;border-radius:999px;
+      padding:9px 12px;border-radius:999px;
       border:1px solid var(--line);
       background:#fff;
       color:#111827;font-size:12px;
       box-shadow: 0 6px 14px rgba(0,0,0,.06);
+      white-space:nowrap;
     }
+
     .card{
       background:var(--card);
       border:1px solid var(--line);
       border-radius:var(--radius);
-      padding:14px;
+      padding:16px;
       box-shadow: var(--shadow);
     }
-    h2{font-size:15px;margin:6px 0 10px}
-    h3{font-size:14px;margin:12px 0 8px}
-    label{display:block;font-size:13px;margin:10px 0 6px;color:#111827}
+
+    h2{font-size:16px;margin:6px 0 12px}
+    h3{font-size:14px;margin:14px 0 10px}
+
+    label{display:block;font-size:13px;margin:12px 0 6px;color:#111827}
+
     input,select{
-      width:100%; padding:12px 12px; border-radius:14px;
+      width:100%;
+      padding:12px 12px;
+      border-radius:14px;
       border:1px solid var(--line);
       background:#fff;
-      color:var(--text); outline:none; font-size:16px
+      color:var(--text);
+      outline:none;
+      font-size:16px;
     }
     input::placeholder{color:#9ca3af}
-    .row{display:flex;gap:10px;flex-wrap:wrap}
-    .row > *{flex:1 1 160px}
+
+    .row{display:flex;gap:12px;flex-wrap:wrap;align-items:flex-end}
+    .row > *{flex:1 1 220px;min-width:220px}
+    @media (max-width:720px){
+      .row > *{min-width:unset;flex:1 1 160px}
+    }
+
     .btn{
-      width:100%; padding:12px 14px; border:0; border-radius:14px;
-      font-size:16px; font-weight:800; cursor:pointer;
+      width:100%;
+      padding:12px 14px;
+      border:0;
+      border-radius:14px;
+      font-size:16px;
+      font-weight:800;
+      cursor:pointer;
     }
     .btn.primary{background:var(--btn); color:white}
     .btn.ghost{background:#fff;color:var(--btn);border:1px solid var(--line)}
     .btn.ok{background:var(--ok);color:white}
     .btn.bad{background:var(--bad);color:white}
     .btn.warn{background:var(--warn);color:white}
+
     .note{
-      margin-top:10px;padding:10px;border-radius:14px;
+      margin-top:12px;
+      padding:12px;
+      border-radius:16px;
       background:#f9fafb;
-      border:1px solid var(--line)
+      border:1px solid var(--line);
     }
+
     .hidden{display:none !important}
-    .kpi{display:flex;gap:10px;margin:10px 0}
+
+    .kpi{display:flex;gap:12px;margin:12px 0;flex-wrap:wrap}
     .kpi .box{
-      flex:1;background:#fff;border:1px solid var(--line);
-      border-radius:14px;padding:10px
+      flex:1 1 220px;
+      background:#fff;border:1px solid var(--line);
+      border-radius:14px;padding:12px;
+      min-width:220px;
     }
     .kpi .v{font-size:18px;font-weight:900}
-    .kpi .t{font-size:12px;color:var(--muted);margin-top:4px}
-    table{width:100%;border-collapse:collapse;margin-top:10px}
-    th,td{padding:10px 8px;border-bottom:1px solid var(--line);font-size:13px;text-align:right}
+    .kpi .t{font-size:12px;color:var(--muted);margin-top:6px}
+
+    table{width:100%;border-collapse:collapse;margin-top:12px}
+    th,td{padding:10px 8px;border-bottom:1px solid var(--line);font-size:13px;text-align:right;vertical-align:top}
     th{color:#111827;font-weight:900;background:#f9fafb}
-    .dangerText{color:#b91c1c}
-    .okText{color:#166534}
-    .muted{color:var(--muted);font-size:12px}
-    .divider{height:1px;background:var(--line);margin:12px 0}
+
+    .dangerText{color:#b91c1c;margin:10px 0 0}
+    .okText{color:#166534;margin:10px 0 0}
+    .muted{color:var(--muted);font-size:12px;line-height:1.5}
+    .divider{height:1px;background:var(--line);margin:14px 0}
+
     .footerActions{
       position:fixed;bottom:0;left:0;right:0;
       padding:10px 12px;
-      background:rgba(244,246,248,.85);
+      background:rgba(244,246,248,.88);
       backdrop-filter: blur(12px);
       border-top:1px solid var(--line);
     }
-    .footerActions .wrap2{max-width:900px;margin:0 auto}
+    .footerActions .wrap2{max-width:980px;margin:0 auto}
+
     .tag{
       display:inline-block;border:1px solid var(--line);background:#fff;border-radius:999px;
-      padding:4px 10px;font-size:12px;color:#111827
+      padding:5px 10px;font-size:12px;color:#111827;
+      white-space:nowrap;
     }
-    .grid2{display:grid;grid-template-columns:1fr 1fr;gap:10px}
+
+    .grid2{display:grid;grid-template-columns:1fr 1fr;gap:12px}
     @media (max-width:720px){ .grid2{grid-template-columns:1fr} }
+
+    .tabs{display:flex;gap:10px;flex-wrap:wrap}
+    .tabs .btn{max-width:220px}
   </style>
 </head>
 
@@ -122,18 +160,15 @@
     <div id="loginCard" class="card">
       <h2>התחברות</h2>
 
-      <div class="note">
-        <div class="muted">חיבור לפרויקט:</div>
-        <div><b id="diagProject">—</b></div>
-      </div>
-
       <label>מייל</label>
       <input id="email" dir="ltr" type="email" placeholder="name@company.com" autocomplete="username" />
 
       <label>סיסמה</label>
       <input id="password" dir="ltr" type="password" placeholder="••••••••" autocomplete="current-password" />
 
-      <button class="btn primary" id="btnEmailLogin">התחבר/י</button>
+      <div class="row" style="margin-top:12px">
+        <button class="btn primary" id="btnEmailLogin">התחבר/י</button>
+      </div>
 
       <p id="loginMsg" class="dangerText"></p>
     </div>
@@ -155,12 +190,12 @@
 
       <div class="note">
         <div><b>מייל:</b> <span id="pEmail">—</span></div>
-        <div><b>טלפון:</b> <span id="pPhone">—</span></div>
+        <div style="margin-top:6px"><b>טלפון:</b> <span id="pPhone">—</span></div>
         <div class="divider"></div>
         <div><b>סטטוס עובד:</b> <span id="pStatus" class="tag">—</span></div>
       </div>
 
-      <div class="row" style="margin-top:10px">
+      <div class="row" style="margin-top:14px">
         <button class="btn ok" id="btnIn">כניסה</button>
         <button class="btn bad" id="btnOut">יציאה</button>
       </div>
@@ -174,7 +209,7 @@
       <h2>מסך מנהל</h2>
 
       <div class="note">
-        <div class="row">
+        <div class="tabs">
           <button class="btn ghost" id="tabUsers">עובדים</button>
           <button class="btn ghost" id="tabReports">דוחות</button>
         </div>
@@ -188,8 +223,8 @@
           <div>
             <label>בחר עובד</label>
             <select id="userSelectManage"></select>
-            <div class="muted" style="margin-top:6px">
-              יצירת משתמש חדש (מייל+סיסמה) נעשית פעם אחת ב-Firebase → Authentication → Users → Add user.
+            <div class="muted" style="margin-top:10px">
+              יצירת משתמש חדש (מייל+סיסמה) נעשית ב-Firebase → Authentication → Users → Add user.<br>
               כאן מנהלים פרטים והשבתה מתוך האפליקציה.
             </div>
           </div>
@@ -203,7 +238,7 @@
           </div>
         </div>
 
-        <div class="grid2">
+        <div class="grid2" style="margin-top:6px">
           <div>
             <label>שם מלא</label>
             <input id="manageFullName" placeholder="ישראל ישראלי" />
@@ -214,11 +249,11 @@
           </div>
         </div>
 
-        <div class="grid2">
+        <div class="grid2" style="margin-top:6px">
           <div>
             <label>מייל</label>
             <input id="manageEmail" dir="ltr" placeholder="employee@company.com" disabled />
-            <div class="muted">המייל מגיע מ-Firebase Auth ולכן לקריאה בלבד.</div>
+            <div class="muted" style="margin-top:6px">המייל מגיע מ-Firebase Auth ולכן לקריאה בלבד.</div>
           </div>
           <div>
             <label>תפקיד</label>
@@ -229,7 +264,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row" style="margin-top:14px">
           <button class="btn primary" id="btnSaveUser">שמור פרטים</button>
           <button class="btn ghost" id="btnReloadUsers">רענן רשימה</button>
         </div>
@@ -271,18 +306,18 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row" style="margin-top:6px">
           <div>
             <label>עובד</label>
             <select id="userSelectReport"></select>
-            <div class="muted">בחר/י “כולם” לדוח כולל.</div>
+            <div class="muted" style="margin-top:6px">בחר/י “כולם” לדוח כולל.</div>
           </div>
-          <div style="align-self:end">
+          <div>
             <button class="btn primary" id="btnLoadReport">הפק דוח</button>
           </div>
         </div>
 
-        <div class="row">
+        <div class="row" style="margin-top:10px">
           <button class="btn ghost" id="btnExportCsv">ייצוא ל-Excel (CSV)</button>
           <button class="btn ghost" id="btnExportPdf">ייצוא ל-PDF</button>
         </div>
@@ -333,7 +368,6 @@
     import { getAuth, onAuthStateChanged, signInWithEmailAndPassword, signOut, setPersistence, browserLocalPersistence } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js";
     import { getFirestore, doc, getDoc, setDoc, updateDoc, serverTimestamp, collection, getDocs, query, where, orderBy, Timestamp } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-firestore.js";
 
-    // ✅ הקונפיג המדויק שנתת
     const firebaseConfig = {
       apiKey: "AIzaSyBBpoCWqanFcP7pU8pmosmYSPU920D0lrY",
       authDomain: "attendance-habonim.firebaseapp.com",
@@ -357,8 +391,6 @@
     const show = (el) => el.classList.remove("hidden");
     const hide = (el) => el.classList.add("hidden");
 
-    $("diagProject").textContent = firebaseConfig.projectId || "—";
-
     function cleanEmail(raw){
       return String(raw || "")
         .trim()
@@ -370,10 +402,7 @@
       return ADMIN_EMAILS.includes(String(email).trim().toLowerCase());
     }
     function setMode(mode){
-      hide($("loginCard"));
-      hide($("employeeCard"));
-      hide($("adminCard"));
-      hide($("roleBadge"));
+      hide($("loginCard")); hide($("employeeCard")); hide($("adminCard")); hide($("roleBadge"));
       if(mode === "login") show($("loginCard"));
       if(mode === "employee") show($("employeeCard"));
       if(mode === "admin"){ show($("adminCard")); show($("roleBadge")); }
@@ -479,6 +508,7 @@
       const fromY = ymd(start);
       const toY = ymd(new Date(end.getTime()-1));
 
+      // ⚠️ זה המקום שדורש אינדקס קומפוזיט (uid + dateYMD + orderBy).
       const qy = query(
         collection(db,"attendance"),
         where("uid","==",uid),
@@ -510,7 +540,7 @@
     }
 
     // ===== ADMIN: Users =====
-    let usersCache = []; // {id, data}
+    let usersCache = [];
 
     function fillSelectManage(){
       const sel = $("userSelectManage");
@@ -648,6 +678,7 @@
           orderBy("dateYMD","asc")
         );
       } else {
+        // ⚠️ גם פה נדרש אינדקס קומפוזיט.
         qy = query(
           collection(db,"attendance"),
           where("uid","==",uidOrAll),
@@ -749,11 +780,9 @@
       $("toDate").value = ymd(last);
     }
 
-    // Tabs
     function showUsersTab(){ show($("usersTab")); hide($("reportsTab")); }
     function showReportsTab(){ hide($("usersTab")); show($("reportsTab")); }
 
-    // Events
     $("btnEmailLogin").onclick = async () => {
       $("loginMsg").textContent = "";
       const email = cleanEmail($("email").value);
@@ -864,7 +893,6 @@
     $("btnExportCsv").onclick = exportCSV;
     $("btnExportPdf").onclick = exportPDF;
 
-    // Auth state
     onAuthStateChanged(auth, async (user) => {
       $("loginMsg").textContent = "";
       $("empMsg").textContent = "";
@@ -904,7 +932,6 @@
       }
     });
 
-    // Role bootstrap: ensure admins get role even if first doc created as employee
     onAuthStateChanged(auth, async (user) => {
       if(!user) return;
       if(isAdminEmail(user.email)){
